Clean up imports

--- a/Pulsebuilding tutorial II.ipynb
+++ b/Pulsebuilding tutorial II.ipynb
@@ -35,7 +35,7 @@
    "outputs": [],
    "source": [
     "%matplotlib nbagg\n",
-    "import qcodes.instrument_drivers.tektronix.pulsebuilding as pb\n",
+    "import pulsebuilding as pb\n",
     "import numpy as np\n",
     "\n",
     "ramp = pb.PulseAtoms.ramp\n",
@@ -119,6 +119,45 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function insertSegment in module pulsebuilding:\n",
+      "\n",
+      "insertSegment(self, pos, func, args=(), name=None, ts=1, durs=None)\n",
+      "    Insert a segment into the bluePrint.\n",
+      "    \n",
+      "    Args:\n",
+      "        pos (int): The position at which to add the segment. Counts like\n",
+      "            a python list; 0 is first, -1 is last. Values below -1 are\n",
+      "            not allowed, though.\n",
+      "        func (function): Function describing the segment. Must have its\n",
+      "           duration as the last argument (unless its a special function).\n",
+      "        args (tuple): Tuple of arguments BESIDES duration. Default: ()\n",
+      "        name (str): Name of the segment. If none is given, the segment\n",
+      "            will receive the name of its function, possibly with a number\n",
+      "            appended.\n",
+      "        ts (int): Number of time segments this segment should last.\n",
+      "            Default: 1.\n",
+      "        durs (Optional[Union[float, tuple]]): The duration(s) of the\n",
+      "            segment. Must be a tuple if more than one is specified,\n",
+      "            else both a float and a tuple is acceptable.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(pb.BluePrint.insertSegment)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -912,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -1729,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -1739,9 +1778,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Help on method setChannelVoltageRange in module qcodes.instrument_drivers.tektronix.pulsebuilding:\n",
+      "Help on method setChannelVoltageRange in module pulsebuilding:\n",
       "\n",
-      "setChannelVoltageRange(channel, ampl, offset) method of qcodes.instrument_drivers.tektronix.pulsebuilding.Sequence instance\n",
+      "setChannelVoltageRange(channel, ampl, offset) method of pulsebuilding.Sequence instance\n",
       "    Assign the physical voltages of the channel. This is used when making\n",
       "    output for .awg files. The corresponding parameters in the QCoDeS\n",
       "    AWG5014 driver are called chXX_amp and chXX_offset. Please ensure that\n",
@@ -1752,15 +1791,24 @@
       "        channel (int): The channel number\n",
       "        ampl (float): The channel peak-to-peak amplitude (V)\n",
       "        offset (float): The channel offset (V)\n",
-      "\n"
+      "\n",
+      "---------------------------------------------\n",
+      "[1, 1, 1, 1, 1] [1, 1, 1, 0.0]\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/william/QCoDeS/qcodes/instrument_drivers/tektronix/pulsebuilding.py:38: VisibleDeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
-      "  return (np.zeros(dur*SR))\n"
+     "ename": "ValueError",
+     "evalue": "The specified timesteps do not match the number of durations. (5 and 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-59c417383e2f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m \u001b[0mtup\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mseq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputForAWGFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/william/sourcecodes/pulsebuilding/pulsebuilding.py\u001b[0m in \u001b[0;36moutputForAWGFile\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1811\u001b[0m             \u001b[0mdurations\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchan\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpos\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mchan\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchannels\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1812\u001b[0m             elements.append(elementBuilder(blueprints, SR, durations,\n\u001b[0;32m-> 1813\u001b[0;31m                                            channels))\n\u001b[0m\u001b[1;32m   1814\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1815\u001b[0m         \u001b[0;31m# Apply channel scaling\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/william/sourcecodes/pulsebuilding/pulsebuilding.py\u001b[0m in \u001b[0;36melementBuilder\u001b[0;34m(blueprints, SR, durations, channels, returnnewdurs)\u001b[0m\n\u001b[1;32m   1998\u001b[0m     \u001b[0mbpdurs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mblueprints\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdurations\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1999\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mreturnnewdurs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2000\u001b[0;31m         \u001b[0msubelems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0m_subelementBuilder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdur\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mbp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdur\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbpdurs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2001\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2002\u001b[0m         \u001b[0msubelems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/william/sourcecodes/pulsebuilding/pulsebuilding.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m   1998\u001b[0m     \u001b[0mbpdurs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mblueprints\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdurations\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1999\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mreturnnewdurs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2000\u001b[0;31m         \u001b[0msubelems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0m_subelementBuilder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdur\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mbp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdur\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbpdurs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2001\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2002\u001b[0m         \u001b[0msubelems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/william/sourcecodes/pulsebuilding/pulsebuilding.py\u001b[0m in \u001b[0;36m_subelementBuilder\u001b[0;34m(blueprint, SR, durs)\u001b[0m\n\u001b[1;32m   1889\u001b[0m         raise ValueError('The specified timesteps do not match the number ' +\n\u001b[1;32m   1890\u001b[0m                          'of durations. ({} and {})'.format(sum(tslist),\n\u001b[0;32m-> 1891\u001b[0;31m                                                             len(durations)))\n\u001b[0m\u001b[1;32m   1892\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1893\u001b[0m     \u001b[0;31m# handle waituntil by translating it into a normal function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: The specified timesteps do not match the number of durations. (5 and 4)"
      ]
     }
    ],
@@ -1785,7 +1833,7 @@
     "seq.setSeveralElements(3, boxandwiggle, ('varyme', 'freq'), [0.25, 0.25, 0.25, 2.25], np.logspace(0, 1, 2))\n",
     "\n",
     "# now set the sequencer information\n",
-    "for pos in range(1, seq.lenght+1):\n",
+    "for pos in range(1, seq.length+1):\n",
     "    seq.setSequenceSettings(pos, 1, 1, 1, 1)\n",
     "\n",
     "# The AWG5014 driver takes arrays with values in the range -1 to 1 as input. To ensure the correct scaling, the user \n",
@@ -1799,7 +1847,9 @@
     "seq.setChannelDelay(1, 0.1)\n",
     "\n",
     "\n",
-    "tup = seq.outputForAWGFile()\n"
+    "# Currently broken. TODO: fix in Sequence2\n",
+    "\n",
+    "# tup = seq.outputForAWGFile()\n"
    ]
   },
   {
@@ -2585,6 +2635,40 @@
    ],
    "source": [
     "seq.plotSequence()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method getLength in module pulsebuilding:\n",
+      "\n",
+      "getLength(SR, durs) method of pulsebuilding.BluePrint instance\n",
+      "    Calculate the length of the BluePrint, where it to be forged with\n",
+      "    the specified durations.\n",
+      "    \n",
+      "    Args:\n",
+      "        durs (list): List of durations\n",
+      "    \n",
+      "    Returns:\n",
+      "        int: The number of points of the element\n",
+      "    \n",
+      "    Raises:\n",
+      "        ValueError: If the length of durations does not match the\n",
+      "            blueprint.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(boxandwiggle."
    ]
   },
   {
@@ -3402,7 +3486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
