make tutorial executed in the right order

--- a/docs/Pulse Building Tutorial.ipynb
+++ b/docs/Pulse Building Tutorial.ipynb
@@ -2590,14 +2590,6 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/william/sourcecodes/pulsebuilding/broadbean/broadbean.py:686: UserWarning: Deprecation warning: please specify \"dur\" rather than \"durs\" when inserting a segment\n",
-      "  warnings.warn('Deprecation warning: please specify \"dur\" rather '\n"
-     ]
-    },
-    {
      "data": {
       "application/javascript": [
        "/* Put everything inside the global mpl namespace */\n",
@@ -3395,9 +3387,9 @@
     "# create a blueprint\n",
     "bp_atm = bb.BluePrint()\n",
     "bp_atm.setSR(100)\n",
-    "bp_atm.insertSegment(0, ramp, (0, 1), durs=3)\n",
-    "bp_atm.insertSegment(1, sine, (0.5, 1, 1), durs=2)\n",
-    "bp_atm.insertSegment(2, ramp, (1, 0), durs=3)\n",
+    "bp_atm.insertSegment(0, ramp, (0, 1), dur=3)\n",
+    "bp_atm.insertSegment(1, sine, (0.5, 1, 1), dur=2)\n",
+    "bp_atm.insertSegment(2, ramp, (1, 0), dur=3)\n",
     "\n",
     "# specify markers in absolute time\n",
     "bp_atm.marker1 = [(1, 0.5), (2, 0.5)]\n",
@@ -3413,14 +3405,6 @@
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/william/sourcecodes/pulsebuilding/broadbean/broadbean.py:686: UserWarning: Deprecation warning: please specify \"dur\" rather than \"durs\" when inserting a segment\n",
-      "  warnings.warn('Deprecation warning: please specify \"dur\" rather '\n"
-     ]
-    },
     {
      "data": {
       "application/javascript": [
@@ -5005,9 +4989,9 @@
     "\n",
     "bp_rtm = bb.BluePrint()\n",
     "bp_rtm.setSR(100)\n",
-    "bp_rtm.insertSegment(0, ramp, (0, 1), durs=1)\n",
-    "bp_rtm.insertSegment(1, ramp, (1, 1), durs=1)\n",
-    "bp_rtm.insertSegment(2, sine, (1.675, 1, 0), durs=1.5, name='mysine')  # This is the important segment\n",
+    "bp_rtm.insertSegment(0, ramp, (0, 1), dur=1)\n",
+    "bp_rtm.insertSegment(1, ramp, (1, 1), dur=1)\n",
+    "bp_rtm.insertSegment(2, sine, (1.675, 1, 0), dur=1.5, name='mysine')  # This is the important segment\n",
     "# make marker 1 go ON a bit before the sine comes on\n",
     "bp_rtm.setSegmentMarker('mysine', (-0.1, 0.2), 1)  # segment name, (delay, duration), markerID\n",
     "# make marker 2 go ON halfway through the sine\n",
@@ -5016,8 +5000,8 @@
     "bp_rtm.plot()\n",
     "\n",
     "# Even if we insert segments before and after the sine, the markers \"stick\" to the sine segment\n",
-    "bp_rtm.insertSegment(0, ramp, (0, 0), durs=1)\n",
-    "bp_rtm.insertSegment(-1, ramp, (0, 0.2), durs=1)\n",
+    "bp_rtm.insertSegment(0, ramp, (0, 0), dur=1)\n",
+    "bp_rtm.insertSegment(-1, ramp, (0, 0.2), dur=1)\n",
     "\n",
     "bp_rtm.plot()\n",
     "\n",
@@ -5042,14 +5026,6 @@
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/william/sourcecodes/pulsebuilding/broadbean/broadbean.py:686: UserWarning: Deprecation warning: please specify \"dur\" rather than \"durs\" when inserting a segment\n",
-      "  warnings.warn('Deprecation warning: please specify \"dur\" rather '\n"
-     ]
-    },
     {
      "data": {
       "application/javascript": [
@@ -7424,9 +7400,9 @@
     "bp_mod = bb.BluePrint()\n",
     "bp_mod.setSR(100)\n",
     "\n",
-    "bp_mod.insertSegment(0, ramp, (0, 0), name='before', durs=1)\n",
-    "bp_mod.insertSegment(1, ramp, (1, 1), name='plateau', durs=1)\n",
-    "bp_mod.insertSegment(2, ramp, (0, 0), name='after', durs=1)\n",
+    "bp_mod.insertSegment(0, ramp, (0, 0), name='before', dur=1)\n",
+    "bp_mod.insertSegment(1, ramp, (1, 1), name='plateau', dur=1)\n",
+    "bp_mod.insertSegment(2, ramp, (0, 0), name='after', dur=1)\n",
     "\n",
     "bp_mod.plot()\n",
     "\n",
@@ -7459,14 +7435,6 @@
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/william/sourcecodes/pulsebuilding/broadbean/broadbean.py:686: UserWarning: Deprecation warning: please specify \"dur\" rather than \"durs\" when inserting a segment\n",
-      "  warnings.warn('Deprecation warning: please specify \"dur\" rather '\n"
-     ]
-    },
     {
      "data": {
       "application/javascript": [
@@ -9054,11 +9022,11 @@
     "bp_wait = bb.BluePrint()\n",
     "bp_wait.setSR(100)\n",
     "\n",
-    "bp_wait.insertSegment(0, ramp, (0, 0), durs=1)\n",
-    "bp_wait.insertSegment(1, ramp, (1, 1), name='plateau', durs=1)\n",
+    "bp_wait.insertSegment(0, ramp, (0, 0), dur=1)\n",
+    "bp_wait.insertSegment(1, ramp, (1, 1), name='plateau', dur=1)\n",
     "# function must be sthe string 'waituntil', the argument is the ABSOLUTE time to wait until\n",
     "bp_wait.insertSegment(2, 'waituntil', (5,))  \n",
-    "bp_wait.insertSegment(3, sine, (1, 0.1, 0), durs=1)\n",
+    "bp_wait.insertSegment(3, sine, (1, 0.1, 0), dur=1)\n",
     "bp_wait.plot()\n",
     "\n",
     "# If we make the square pulse longer, the sine still occurs at 5 s\n",
@@ -9083,14 +9051,6 @@
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/william/sourcecodes/pulsebuilding/broadbean/broadbean.py:686: UserWarning: Deprecation warning: please specify \"dur\" rather than \"durs\" when inserting a segment\n",
-      "  warnings.warn('Deprecation warning: please specify \"dur\" rather '\n"
-     ]
-    },
     {
      "data": {
       "application/javascript": [
@@ -9887,9 +9847,9 @@
     "# Create the blueprints\n",
     "bp_square = bb.BluePrint()\n",
     "bp_square.setSR(1e9)\n",
-    "bp_square.insertSegment(0, ramp, (0, 0), durs=0.1e-6)\n",
-    "bp_square.insertSegment(1, ramp, (10e-3, 10e-3), name='top', durs=0.1e-6)\n",
-    "bp_square.insertSegment(2, ramp, (0, 0), durs=0.1e-6)\n",
+    "bp_square.insertSegment(0, ramp, (0, 0), dur=0.1e-6)\n",
+    "bp_square.insertSegment(1, ramp, (10e-3, 10e-3), name='top', dur=0.1e-6)\n",
+    "bp_square.insertSegment(2, ramp, (0, 0), dur=0.1e-6)\n",
     "bp_boxes = bp_square + bp_square\n",
     "#\n",
     "bp_sine = bb.BluePrint()\n",
@@ -10759,16 +10719,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/william/sourcecodes/pulsebuilding/broadbean/broadbean.py:686: UserWarning: Deprecation warning: please specify \"dur\" rather than \"durs\" when inserting a segment\n",
-      "  warnings.warn('Deprecation warning: please specify \"dur\" rather '\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "seq1 = bb.Sequence()\n",
     "\n",
@@ -10781,9 +10732,9 @@
     "# Create the blueprints\n",
     "bp_square = bb.BluePrint()\n",
     "bp_square.setSR(1e9)\n",
-    "bp_square.insertSegment(0, ramp, (0, 0), durs=100e-9)\n",
-    "bp_square.insertSegment(1, ramp, (1e-3, 1e-3), name='top', durs=100e-9)\n",
-    "bp_square.insertSegment(2, ramp, (0, 0), durs=100e-9)\n",
+    "bp_square.insertSegment(0, ramp, (0, 0), dur=100e-9)\n",
+    "bp_square.insertSegment(1, ramp, (1e-3, 1e-3), name='top', dur=100e-9)\n",
+    "bp_square.insertSegment(2, ramp, (0, 0), dur=100e-9)\n",
     "bp_boxes = bp_square + bp_square\n",
     "#\n",
     "bp_sine = bb.BluePrint()\n",
@@ -13388,21 +13339,6 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Automatic pdb calling has been turned ON\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/william/sourcecodes/pulsebuilding/broadbean/broadbean.py:686: UserWarning: Deprecation warning: please specify \"dur\" rather than \"durs\" when inserting a segment\n",
-      "  warnings.warn('Deprecation warning: please specify \"dur\" rather '\n"
-     ]
-    },
-    {
      "data": {
       "application/javascript": [
        "/* Put everything inside the global mpl namespace */\n",
@@ -14982,13 +14918,12 @@
     }
    ],
    "source": [
-    "%pdb\n",
     "# Example 1: vary the duration of a square pulse\n",
     "\n",
     "# First, we make a basic element, in this example containing just a single blueprint\n",
     "basebp = bb.BluePrint()\n",
-    "basebp.insertSegment(0, ramp, (0, 0), durs=0.5)\n",
-    "basebp.insertSegment(1, ramp, (1, 1), durs=1, name='varyme')\n",
+    "basebp.insertSegment(0, ramp, (0, 0), dur=0.5)\n",
+    "basebp.insertSegment(1, ramp, (1, 1), dur=1, name='varyme')\n",
     "basebp.insertSegment(2, 'waituntil', 5)\n",
     "basebp.setSR(100)\n",
     "\n",
@@ -15015,14 +14950,6 @@
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/william/sourcecodes/pulsebuilding/broadbean/broadbean.py:686: UserWarning: Deprecation warning: please specify \"dur\" rather than \"durs\" when inserting a segment\n",
-      "  warnings.warn('Deprecation warning: please specify \"dur\" rather '\n"
-     ]
-    },
     {
      "data": {
       "application/javascript": [
@@ -15820,8 +15747,8 @@
     "\n",
     "# We make the same base element as in Example 1\n",
     "basebp = bb.BluePrint()\n",
-    "basebp.insertSegment(0, ramp, (0, 0), durs=0.5)\n",
-    "basebp.insertSegment(1, ramp, (1, 1), durs=1, name='varyme')\n",
+    "basebp.insertSegment(0, ramp, (0, 0), dur=0.5)\n",
+    "basebp.insertSegment(1, ramp, (1, 1), dur=1, name='varyme')\n",
     "basebp.insertSegment(2, 'waituntil', 5)\n",
     "basebp.setSR(100)\n",
     "\n",
@@ -15846,14 +15773,6 @@
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/william/sourcecodes/pulsebuilding/broadbean/broadbean.py:686: UserWarning: Deprecation warning: please specify \"dur\" rather than \"durs\" when inserting a segment\n",
-      "  warnings.warn('Deprecation warning: please specify \"dur\" rather '\n"
-     ]
-    },
     {
      "data": {
       "application/javascript": [
@@ -17447,13 +17366,13 @@
     "# \n",
     "\n",
     "pulsebp = bb.BluePrint()\n",
-    "pulsebp.insertSegment(0, ramp, (0, 0), durs=5e-4)\n",
-    "pulsebp.insertSegment(1, ramp, (1, 1), durs=1e-3, name='varyme')\n",
+    "pulsebp.insertSegment(0, ramp, (0, 0), dur=5e-4)\n",
+    "pulsebp.insertSegment(1, ramp, (1, 1), dur=1e-3, name='varyme')\n",
     "pulsebp.insertSegment(2, 'waituntil', 2e-3)\n",
     "pulsebp.setSR(1e6)\n",
     "\n",
     "sinebp = bb.BluePrint()\n",
-    "sinebp.insertSegment(0, sine, (0.2e3, 0.5, 0.5), durs=10e-3)\n",
+    "sinebp.insertSegment(0, sine, (0.2e3, 0.5, 0.5), dur=10e-3)\n",
     "sinebp.setSR(1e6)\n",
     "\n",
     "elem1 = bb.Element()\n",
@@ -17483,6 +17402,15 @@
     "newseq = bb.repeatAndVarySequence(baseseq, poss, channels, names, args, iters)\n",
     "newseq.plotSequence()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
