Make the segment functions take time instead of dur+SR

--- a/docs/Segments.ipynb
+++ b/docs/Segments.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "### Allowed functions\n",
     "\n",
-    "For a function to be useable, it must have a call signature of `(dur, SR, *args)` and it must return a numpy array of length `dur*SR`."
+    "For a function to be useable, it must have a call signature of `(time, *args)` and it must return a numpy array of length `dur*SR`. The `time` argument will be provided by the `Segment` and will be a `numpy` `linspace` from `0` to `dur` with **NO** endpoint. "
    ]
   },
   {
@@ -53,10 +53,9 @@
    "source": [
     "\n",
     "\n",
-    "def sinewave(dur, SR, amp, freq, offset, phase):\n",
+    "def sinewave(time, amp, freq, offset, phase):\n",
     "    \n",
-    "    timeax = np.linspace(0, dur, int(dur*SR), endpoint=False)\n",
-    "    signal = amp * np.sin(2 * np.pi * freq * timeax + phase) + offset\n",
+    "    signal = amp * np.sin(2 * np.pi * freq * time + phase) + offset\n",
     "    return signal"
    ]
   },
@@ -865,13 +864,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello! \n"
-     ]
     }
    ],
    "source": [
@@ -891,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1682,13 +1674,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello! \n"
-     ]
     }
    ],
    "source": [
@@ -1705,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2520,13 +2505,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello! \n"
-     ]
     }
    ],
    "source": [
@@ -2535,13 +2513,6 @@
     "plotter(sinesegment, SR=1e9, qubit_frequency=qbf)\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
