Make durations similar to function args

--- a/docs/Segments.ipynb
+++ b/docs/Segments.ipynb
@@ -67,8 +67,12 @@
    "source": [
     "sinesegment = bb.Segment('sine',\n",
     "                         sinewave,\n",
-    "                         {'freq': 5e6, 'amp': 1, 'offset': 0, 'phase': 0},\n",
-    "                         duration=1e-6)"
+    "                         freq=5e6,\n",
+    "                         amp=1,\n",
+    "                         offset=0,\n",
+    "                         phase=0,\n",
+    "                         duration=1e-6)\n",
+    "                         "
    ]
   },
   {
@@ -1690,18 +1694,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "sinesegment = bb.Segment('sine',\n",
     "                         sinewave,\n",
-    "                         {'freq': 'qubit_frequency', 'amp': 1, 'offset': 0, 'phase': 0},\n",
+    "                         freq='qubit_frequency',\n",
+    "                         amp=1,\n",
+    "                         offset=0,\n",
+    "                         phase=0,\n",
     "                         duration=1e-6)\n",
     "\n",
     "cosinesegment = bb.Segment('sine',\n",
     "                           sinewave,\n",
-    "                           {'freq': 'qubit_frequency', 'amp': 1, 'offset': 0, 'phase': np.pi},\n",
+    "                           freq='qubit_frequency',\n",
+    "                           amp=1,\n",
+    "                           offset=0,\n",
+    "                           phase=0,\n",
     "                           duration=1e-6)\n"
    ]
   },
@@ -1714,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
