--- a/docs/Segments.ipynb
+++ b/docs/Segments.ipynb
@@ -65,8 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sinesegment = bb.Segment('sine',\n",
-    "                         sinewave,\n",
+    "sinesegment = bb.Segment(sinewave,\n",
     "                         freq=5e6,\n",
     "                         amp=1,\n",
     "                         offset=0,\n",
@@ -76,8 +75,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Segment has a representation:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Segment(sinewave,\n",
+       "freq=5000000.0\n",
+       "amp=1\n",
+       "offset=0\n",
+       "phase=0\n",
+       "duration=1e-06)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sinesegment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1698,21 +1729,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sinesegment = bb.Segment('sine',\n",
-    "                         sinewave,\n",
+    "sinesegment = bb.Segment(sinewave,\n",
     "                         freq='qubit_frequency',\n",
     "                         amp=1,\n",
     "                         offset=0,\n",
     "                         phase=0,\n",
     "                         duration=1e-6)\n",
     "\n",
-    "cosinesegment = bb.Segment('sine',\n",
-    "                           sinewave,\n",
+    "cosinesegment = bb.Segment(sinewave,\n",
     "                           freq='qubit_frequency',\n",
     "                           amp=1,\n",
     "                           offset=0,\n",
     "                           phase=0,\n",
     "                           duration=1e-6)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Segment(sinewave,\n",
+       "freq='qubit_frequency'\n",
+       "amp=1\n",
+       "offset=0\n",
+       "phase=0\n",
+       "duration=1e-06)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sinesegment"
    ]
   },
   {
@@ -1724,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2523,6 +2577,13 @@
     "plotter(sinesegment, SR=1e9, qubit_frequency=qbf)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
