Update notebook with correct __repr__

--- a/docs/Segments.ipynb
+++ b/docs/Segments.ipynb
@@ -90,10 +90,10 @@
      "data": {
       "text/plain": [
        "Segment(sinewave,\n",
-       "freq=5000000.0\n",
-       "amp=1\n",
-       "offset=0\n",
-       "phase=0\n",
+       "freq=5000000.0,\n",
+       "amp=1,\n",
+       "offset=0,\n",
+       "phase=0,\n",
        "duration=1e-06)"
       ]
      },
@@ -1753,10 +1753,10 @@
      "data": {
       "text/plain": [
        "Segment(sinewave,\n",
-       "freq='qubit_frequency'\n",
-       "amp=1\n",
-       "offset=0\n",
-       "phase=0\n",
+       "freq='qubit_frequency',\n",
+       "amp=1,\n",
+       "offset=0,\n",
+       "phase=0,\n",
        "duration=1e-06)"
       ]
      },
