--- a/docs/Symbols in Broadbean v1.0.ipynb
+++ b/docs/Symbols in Broadbean v1.0.ipynb
@@ -21,11 +21,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from broadbean.segment_concept import Segment, FunctionSegment, GroupSegment"
+    "from broadbean.segment_concept import Segment, SegmentGroup\n",
+    "s = Segment(function=lambda time,x: (time + x), duration='waiting_time', x='phase')\n",
+    "s2 = Segment(function=lambda time,x: (time + x), duration='pulse_time', x='phase')\n",
+    "\n",
+    "def my_transformation(in_dict):\n",
+    "    in_dict['total_duration'] = in_dict['waiting_time'] + in_dict['pulse_time']\n",
+    "\n",
+    "gs = SegmentGroup(s,s2, duration='total_duration', transformation=my_transformation)\n",
+    "out = gs.forge(100, waiting_time=1, pulse_time=1, phase=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(200,)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from broadbean.segment_concept import Segment, SegmentGroup\n",
+    "s = Segment(function=lambda time,x: (time + x), duration='waiting_time', x='phase')\n",
+    "s2 = Segment(function=lambda time,x: (time + x), duration='pulse_time', x='phase')\n",
+    "\n",
+    "def my_transformation(in_dict):\n",
+    "    in_dict['total_duration'] = in_dict['waiting_time'] + in_dict['pulse_time']\n",
+    "\n",
+    "gs = SegmentGroup(s,s2, duration='total_duration', transformation=my_transformation)\n",
+    "out = gs.forge(100, waiting_time=1, pulse_time=1, phase=1)"
    ]
   },
   {
@@ -38,23 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'another_property': 1, 'duration': 5, 'val': 2}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "s = Segment(duration='waiting_time', val=None, another_property=1)\n",
-    "s.get_all_properties(waiting_time=5, val=2)"
+    "s = Segment(function=lambda time,x: (time + x), duration='waiting_time', x='phase')"
    ]
   },
   {
@@ -79,7 +103,16 @@
     {
      "data": {
       "text/plain": [
-       "{'duration': 5, 'val': 5}"
+       "array([1.  , 1.01, 1.02, 1.03, 1.04, 1.05, 1.06, 1.07, 1.08, 1.09, 1.1 ,\n",
+       "       1.11, 1.12, 1.13, 1.14, 1.15, 1.16, 1.17, 1.18, 1.19, 1.2 , 1.21,\n",
+       "       1.22, 1.23, 1.24, 1.25, 1.26, 1.27, 1.28, 1.29, 1.3 , 1.31, 1.32,\n",
+       "       1.33, 1.34, 1.35, 1.36, 1.37, 1.38, 1.39, 1.4 , 1.41, 1.42, 1.43,\n",
+       "       1.44, 1.45, 1.46, 1.47, 1.48, 1.49, 1.5 , 1.51, 1.52, 1.53, 1.54,\n",
+       "       1.55, 1.56, 1.57, 1.58, 1.59, 1.6 , 1.61, 1.62, 1.63, 1.64, 1.65,\n",
+       "       1.66, 1.67, 1.68, 1.69, 1.7 , 1.71, 1.72, 1.73, 1.74, 1.75, 1.76,\n",
+       "       1.77, 1.78, 1.79, 1.8 , 1.81, 1.82, 1.83, 1.84, 1.85, 1.86, 1.87,\n",
+       "       1.88, 1.89, 1.9 , 1.91, 1.92, 1.93, 1.94, 1.95, 1.96, 1.97, 1.98,\n",
+       "       1.99])"
       ]
      },
      "execution_count": 3,
@@ -88,8 +121,7 @@
     }
    ],
    "source": [
-    "s2 = Segment(duration='waiting_time', val='waiting_time')\n",
-    "s2.get_all_properties(waiting_time=5)"
+    "s.forge(100, waiting_time=1, phase=1)"
    ]
   },
   {
