promoted sequence_simple to sequence

--- a/docs/Elastic time with transformations.ipynb
+++ b/docs/Elastic time with transformations.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "from broadbean.segment import Segment, SegmentGroup\n",
     "from broadbean.element import Element\n",
-    "from broadbean.sequence_simple import Sequence\n",
+    "from broadbean.sequence import Sequence\n",
     "from broadbean.plotting import plotter"
    ]
   },
