--- a/docs/Symbols in Broadbean v1.0.ipynb
+++ b/docs/Symbols in Broadbean v1.0.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "from broadbean.segment import Segment, SegmentGroup\n",
     "from broadbean.element import Element\n",
-    "from broadbean.sequence_simple import Sequence\n",
+    "from broadbean.sequence import Sequence\n",
     "from broadbean.plotting import plotter"
    ]
   },
@@ -1980,7 +1980,7 @@
     {
      "data": {
       "text/plain": [
-       "broadbean.sequence_simple.Sequence"
+       "broadbean.sequence.Sequence"
       ]
      },
      "execution_count": 9,
