move in_context to root level of broadbean

--- a/docs/Flatbean testground.ipynb
+++ b/docs/Flatbean testground.ipynb
@@ -308,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from broadbean.segment import in_context\n",
+    "from broadbean import in_context\n",
     "\n",
     "seg1 = zero(duration='flex_time')\n",
     "seg2 = flat(duration='pulse_duration', amplitude=1)\n",
