forge as meta data only

--- a/docs/Flatbean testground.ipynb
+++ b/docs/Flatbean testground.ipynb
@@ -31,37 +31,19 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\a-dovoge\\anaconda3\\lib\\site-packages\\h5py\\__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "[Errno 10048] error while attempting to bind on address ('127.0.0.1', 5678): only one usage of each socket address (protocol/network address/port) is normally permitted\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\a-dovoge\\anaconda3\\lib\\asyncio\\base_events.py\", line 1045, in create_server\n",
-      "    sock.bind(sa)\n",
-      "OSError: [WinError 10048] Only one usage of each socket address (protocol/network address/port) is normally permitted\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\users\\a-dovoge\\qcodes\\qcodes\\monitor\\monitor.py\", line 128, in run\n",
-      "    self.server = self.loop.run_until_complete(server_start)\n",
-      "  File \"C:\\Users\\a-dovoge\\anaconda3\\lib\\asyncio\\base_events.py\", line 468, in run_until_complete\n",
-      "    return future.result()\n",
-      "  File \"C:\\Users\\a-dovoge\\anaconda3\\lib\\site-packages\\websockets\\server.py\", line 365, in serve\n",
-      "    server = yield from loop.create_server(factory, host, port, **kwds)\n",
-      "  File \"C:\\Users\\a-dovoge\\anaconda3\\lib\\asyncio\\base_events.py\", line 1049, in create_server\n",
-      "    % (sa, err.strerror.lower()))\n",
-      "OSError: [Errno 10048] error while attempting to bind on address ('127.0.0.1', 5678): only one usage of each socket address (protocol/network address/port) is normally permitted\n"
+      "  from ._conv import register_converters as _register_converters\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connected to: TEKTRONIX AWG5014C (serial:B051039, firmware:SCPI:99.0 FW:4.6.0.7) in 0.12s\n"
+      "Connected to: QCoDeS AWG5014C (serial:1000, firmware:0.1) in 0.10s\n"
      ]
     }
    ],
    "source": [
-    "real_instrument_present = True\n",
+    "real_instrument_present = False\n",
     "\n",
     "if real_instrument_present:\n",
     "    from qdev_wrappers.station_configurator import StationConfigurator\n",
@@ -118,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -666,6 +648,75 @@
     "# do the same thing for the other instrument\n",
     "# fs_other = route(fs, routing_dict, ohter_instrument)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seg1 = sine(duration='excite_time', phase=np.pi/2, amplitude='amp', frequency=1e3)\n",
+    "seg2 = sine(duration='readout_time', frequency=1e3)\n",
+    "m1 = on(duration='excite_time')\n",
+    "m2 = off(duration='readout_time')\n",
+    "gs = SegmentGroup(seg1, seg2,\n",
+    "                  duration='total_duration')\n",
+    "ms = SegmentGroup(m1, m2,\n",
+    "                  duration='total_duration')\n",
+    "e = Element({2:gs,\n",
+    "             '1M1':ms},\n",
+    "            {'nr_rep':2})\n",
+    "\n",
+    "s = Sequence([e, e])\n",
+    "times = {'readout_time': 1e-3,\n",
+    "         'excite_time': 2e-3,\n",
+    "        'amp':1}\n",
+    "fs = s.forge(SR=1e6, context=times, meta_data_only=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'data': {2: ({'atom': 'sine',\n",
+       "     'args': {'phase': 1.5707963267948966,\n",
+       "      'amplitude': 1,\n",
+       "      'frequency': 1000.0,\n",
+       "      'duration': 0.002}},\n",
+       "    {'atom': 'sine', 'args': {'frequency': 1000.0, 'duration': 0.001}}),\n",
+       "   '1M1': ({'atom': 'on', 'args': {'duration': 0.002}},\n",
+       "    {'atom': 'off', 'args': {'duration': 0.001}})},\n",
+       "  'sequencing': {'nr_rep': 2}},\n",
+       " {'data': {2: ({'atom': 'sine',\n",
+       "     'args': {'phase': 1.5707963267948966,\n",
+       "      'amplitude': 1,\n",
+       "      'frequency': 1000.0,\n",
+       "      'duration': 0.002}},\n",
+       "    {'atom': 'sine', 'args': {'frequency': 1000.0, 'duration': 0.001}}),\n",
+       "   '1M1': ({'atom': 'on', 'args': {'duration': 0.002}},\n",
+       "    {'atom': 'off', 'args': {'duration': 0.001}})},\n",
+       "  'sequencing': {'nr_rep': 2}}]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
