improvement of ipynb

--- a/docs/Flatbean testground.ipynb
+++ b/docs/Flatbean testground.ipynb
@@ -650,6 +650,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forge as meta data only\n",
+    "For the time being the sequences can be stored as meta data. Instead of rendering the segments out in the form of an np.ndarray, the atom name and the arguments are stored."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
